@@ -348,6 +348,19 @@ argument_list|()
 expr_stmt|;
 block|}
 block|}
+DECL|method|isDeleted
+specifier|public
+name|boolean
+name|isDeleted
+parameter_list|()
+block|{
+return|return
+name|cp
+operator|.
+name|isDeleted
+argument_list|()
+return|;
+block|}
 DECL|method|getVersion
 specifier|public
 name|long
