@@ -520,7 +520,10 @@ name|hasNext
 argument_list|()
 condition|)
 block|{
-operator|(
+specifier|final
+name|IndexCommit
+name|commit
+init|=
 operator|(
 name|IndexCommit
 operator|)
@@ -528,10 +531,19 @@ name|it
 operator|.
 name|next
 argument_list|()
-operator|)
+decl_stmt|;
+name|commit
 operator|.
 name|delete
 argument_list|()
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|commit
+operator|.
+name|isDeleted
+argument_list|()
+argument_list|)
 expr_stmt|;
 block|}
 block|}
